# linalg-nbs

./: 240720_strang_dl.ipynb  README.md  pyproject.toml
problem-sets/: ps-I.1.ipynb
scratch/: 240720_.ipynb  240803.ipynb  inline_test.py  ts_test.ts
