[tool.poetry]
name = "linalg-nbs"
version = "0.1.0"
description = ""
authors = ["peter bull <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
numpy = "<=1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
plotly = "^5.22.0"
nbformat = "^5.10.4"
sympy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
